syntax = "proto3";

package taxonomy;
import "taxonomy.proto";
import "core.proto";
import "artifact.proto";

import "google/protobuf/Empty.proto";

option csharp_namespace = "TTI.TTF.Taxonomy";
option java_package = "org.tti.ttf.taxonomy";
option java_multiple_files = true;

service Service {
    //gets
    rpc GetFullTaxonomy (taxonomy.model.TaxonomyVersion) returns (taxonomy.model.Taxonomy) {}
    rpc GetBaseArtifact (taxonomy.model.artifact.ArtifactSymbol) returns (taxonomy.model.core.Base) {}
    rpc GetBehaviorArtifact (taxonomy.model.artifact.ArtifactSymbol) returns (taxonomy.model.core.Behavior) {}
    rpc GetBehaviorGroupArtifact (taxonomy.model.artifact.ArtifactSymbol) returns (taxonomy.model.core.BehaviorGroup) {}
    rpc GetPropertySetArtifact (taxonomy.model.artifact.ArtifactSymbol) returns (taxonomy.model.core.PropertySet) {}
    rpc GetTokenTemplateArtifact (taxonomy.model.artifact.TaxonomyFormula) returns (taxonomy.model.core.TokenTemplate) {}

    rpc GetArtifactsOfType (taxonomy.model.artifact.QueryOptions) returns (taxonomy.model.artifact.QueryResult) {}
    
    //sets
    rpc CreateArtifact (taxonomy.model.artifact.NewArtifactRequest) returns (taxonomy.model.artifact.NewArtifactResponse) {}
    rpc UpdateArtifact (taxonomy.model.artifact.UpdateArtifactRequest) returns (taxonomy.model.artifact.UpdateArtifactResponse) {}
    rpc DeleteArtifact (taxonomy.model.artifact.DeleteArtifactRequest) returns (taxonomy.model.artifact.DeleteArtifactResponse) {}

    rpc CommitLocalUpdates(taxonomy.model.artifact.CommitUpdatesRequest) returns (taxonomy.model.artifact.CommitUpdatesResponse) {}
    rpc PullRequest(taxonomy.model.artifact.IssuePullRequest) returns (taxonomy.model.artifact.IssuePullResponse){}
    rpc GetConfig(google.protobuf.Empty) returns (taxonomy.model.artifact.ServiceConfiguration) {}
}

